--- a/sass/project/_p-linkcard.scss
+++ b/sass/project/_p-linkcard.scss
@@ -49,7 +49,7 @@
 				width:40%;
 				text-align:center;
 			}
-			.vrnt-h2,.sugt-p,.ftdt-p{
+			.vrnt-h2,.vrnt-h3,.sugt-p,.ftdt-p{
 				color: $clb-g10;
 				text-shadow:0 0 2px $cla-d10;
 				font-size:1em;
