--- a/sass/layout/_l-menu.scss
+++ b/sass/layout/_l-menu.scss
@@ -5,8 +5,6 @@
 }
 @include mq(tb) {
     @include cloudpouup(navimenu,12vw);
-
-
     #navimenu{
         .navimenu--area{
             .navimenu--contant{
@@ -15,7 +13,6 @@
             }
             @include tglbutton-menu-base(tglbutton-menu);
         }
-        
         #navimenu--on:not(:checked) ~ .navimenu--area{
             .navimenu--contant{transform: scale(0);}
             @include tglbutton-menu-off(tglbutton-menu);
@@ -24,5 +21,9 @@
             .navimenu--contant{transform: scale(100%);}
             @include tglbutton-menu-on(tglbutton-menu,10vw);
         }
+    }
+
+    .navimenu--contant{
+        @include accordionSP(navicate);
     }
 }
