--- a/style.css
+++ b/style.css
@@ -1377,10 +1377,10 @@ html, body {
 
 .talk-base .tk-puff .tk-content.tks-s {
   z-index: auto;
-  border-top-left-radius: 42% 39%;
-  border-top-right-radius: 36% 39%;
-  border-bottom-right-radius: 42% 45%;
-  border-bottom-left-radius: 43% 45%;
+  border-top-left-radius: 37% 40%;
+  border-top-right-radius: 36% 45%;
+  border-bottom-right-radius: 41% 39%;
+  border-bottom-left-radius: 37% 40%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::before, .talk-base .tk-puff .tk-content.tks-s::after {
@@ -1396,31 +1396,31 @@ html, body {
 .talk-base .tk-puff .tk-content.tks-s::before {
   width: 90%;
   left: 5%;
-  -webkit-transform: rotate(11deg);
-          transform: rotate(11deg);
-  border-top-left-radius: 37% 40%;
-  border-top-right-radius: 41% 43%;
-  border-bottom-right-radius: 39% 38%;
-  border-bottom-left-radius: 40% 43%;
+  -webkit-transform: rotate(13deg);
+          transform: rotate(13deg);
+  border-top-left-radius: 37% 38%;
+  border-top-right-radius: 43% 39%;
+  border-bottom-right-radius: 41% 40%;
+  border-bottom-left-radius: 41% 37%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::after {
   width: 90%;
   left: 5%;
-  -webkit-transform: rotate(-10deg);
-          transform: rotate(-10deg);
-  border-top-left-radius: 38% 38%;
-  border-top-right-radius: 41% 38%;
-  border-bottom-right-radius: 43% 41%;
-  border-bottom-left-radius: 44% 39%;
+  -webkit-transform: rotate(-13deg);
+          transform: rotate(-13deg);
+  border-top-left-radius: 39% 39%;
+  border-top-right-radius: 42% 37%;
+  border-bottom-right-radius: 45% 45%;
+  border-bottom-left-radius: 40% 43%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m {
   z-index: auto;
-  border-top-left-radius: 45% 29%;
-  border-top-right-radius: 36% 34%;
-  border-bottom-right-radius: 41% 34%;
-  border-bottom-left-radius: 40% 35%;
+  border-top-left-radius: 43% 34%;
+  border-top-right-radius: 45% 30%;
+  border-bottom-right-radius: 42% 35%;
+  border-bottom-left-radius: 41% 31%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before, .talk-base .tk-puff .tk-content.tks-m::after {
@@ -1434,29 +1434,29 @@ html, body {
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before {
-  -webkit-transform: rotate(8deg);
-          transform: rotate(8deg);
-  border-top-left-radius: 48% 35%;
-  border-top-right-radius: 44% 36%;
-  border-bottom-right-radius: 48% 36%;
-  border-bottom-left-radius: 46% 36%;
+  -webkit-transform: rotate(9deg);
+          transform: rotate(9deg);
+  border-top-left-radius: 46% 39%;
+  border-top-right-radius: 49% 38%;
+  border-bottom-right-radius: 47% 37%;
+  border-bottom-left-radius: 44% 32%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::after {
-  -webkit-transform: rotate(-12deg);
-          transform: rotate(-12deg);
-  border-top-left-radius: 48% 36%;
-  border-top-right-radius: 49% 39%;
-  border-bottom-right-radius: 45% 32%;
-  border-bottom-left-radius: 49% 35%;
+  -webkit-transform: rotate(-13deg);
+          transform: rotate(-13deg);
+  border-top-left-radius: 41% 39%;
+  border-top-right-radius: 41% 38%;
+  border-bottom-right-radius: 47% 34%;
+  border-bottom-left-radius: 47% 36%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l {
   z-index: auto;
-  border-top-left-radius: 33% 25%;
-  border-top-right-radius: 32% 23%;
-  border-bottom-right-radius: 35% 21%;
-  border-bottom-left-radius: 34% 27%;
+  border-top-left-radius: 39% 30%;
+  border-top-right-radius: 39% 28%;
+  border-bottom-right-radius: 39% 24%;
+  border-bottom-left-radius: 32% 24%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::before, .talk-base .tk-puff .tk-content.tks-l::after {
@@ -1470,21 +1470,21 @@ html, body {
 }
 
 .talk-base .tk-puff .tk-content.tks-l::before {
-  -webkit-transform: rotate(8deg);
-          transform: rotate(8deg);
-  border-top-left-radius: 44% 31%;
-  border-top-right-radius: 49% 26%;
-  border-bottom-right-radius: 48% 31%;
-  border-bottom-left-radius: 43% 30%;
+  -webkit-transform: rotate(7deg);
+          transform: rotate(7deg);
+  border-top-left-radius: 47% 35%;
+  border-top-right-radius: 41% 30%;
+  border-bottom-right-radius: 48% 30%;
+  border-bottom-left-radius: 50% 33%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::after {
   -webkit-transform: rotate(-6deg);
           transform: rotate(-6deg);
-  border-top-left-radius: 49% 33%;
-  border-top-right-radius: 50% 33%;
-  border-bottom-right-radius: 45% 34%;
-  border-bottom-left-radius: 42% 30%;
+  border-top-left-radius: 49% 34%;
+  border-top-right-radius: 46% 27%;
+  border-bottom-right-radius: 48% 29%;
+  border-bottom-left-radius: 44% 26%;
 }
 
 .talk-base .tk-puff .tk-content .tkc-p {
@@ -1786,10 +1786,10 @@ html, body {
     display: block;
     position: fixed;
     z-index: auto;
-    border-top-left-radius: 44% 44%;
-    border-top-right-radius: 45% 45%;
-    border-bottom-right-radius: 36% 37%;
-    border-bottom-left-radius: 41% 36%;
+    border-top-left-radius: 36% 36%;
+    border-top-right-radius: 41% 43%;
+    border-bottom-right-radius: 41% 37%;
+    border-bottom-left-radius: 41% 42%;
     -webkit-backdrop-filter: blur(3px);
             backdrop-filter: blur(3px);
   }
@@ -1807,12 +1807,12 @@ html, body {
     top: 5%;
     width: 110%;
     height: 90%;
-    -webkit-transform: rotate(23deg);
-            transform: rotate(23deg);
-    border-top-left-radius: 46% 65%;
-    border-top-right-radius: 48% 57%;
-    border-bottom-right-radius: 47% 64%;
-    border-bottom-left-radius: 50% 64%;
+    -webkit-transform: rotate(26deg);
+            transform: rotate(26deg);
+    border-top-left-radius: 54% 60%;
+    border-top-right-radius: 50% 62%;
+    border-bottom-right-radius: 46% 59%;
+    border-bottom-left-radius: 48% 57%;
     background-color: red;
   }
   #navimenu .navimenu--area::after {
@@ -1822,10 +1822,10 @@ html, body {
     height: 110%;
     -webkit-transform: rotate(-22deg);
             transform: rotate(-22deg);
-    border-top-left-radius: 47% 56%;
-    border-top-right-radius: 52% 58%;
-    border-bottom-right-radius: 47% 57%;
-    border-bottom-left-radius: 46% 57%;
+    border-top-left-radius: 53% 60%;
+    border-top-right-radius: 52% 65%;
+    border-bottom-right-radius: 50% 58%;
+    border-bottom-left-radius: 51% 58%;
     background-color: green;
   }
   #navimenu #navimenu--on:not(:checked) ~ .navimenu--area {
@@ -1855,20 +1855,38 @@ html, body {
   }
   #navimenu .navimenu--area .navimenu--contant {
     background-color: red;
-    margin: 15% 0;
+    margin-top: 10%;
+    height: 85%;
+    overflow-y: scroll;
   }
   #navimenu .navimenu--area .tglbutton-menu {
     position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  #navimenu .navimenu--area .tglbutton-menu .tglbutton-menu--bar1,
+  #navimenu .navimenu--area .tglbutton-menu .tglbutton-menu--bar2,
+  #navimenu .navimenu--area .tglbutton-menu .tglbutton-menu--bar3 {
+    display: block;
+    width: 100%;
+    height: 20%;
+    background-color: #000;
+    border-radius: 3px;
   }
   #navimenu #navimenu--on:not(:checked) ~ .navimenu--area .navimenu--contant {
     -webkit-transform: scale(0);
             transform: scale(0);
   }
   #navimenu #navimenu--on:not(:checked) ~ .navimenu--area .tglbutton-menu {
-    right: 15%;
-    bottom: 15%;
-    width: 70%;
-    height: 70%;
+    position: absolute;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1889,15 +1907,18 @@ html, body {
     background-color: #000;
     border-radius: 3px;
   }
+  #navimenu #navimenu--on:not(:checked) ~ .navimenu--area .tglbutton-menu {
+    right: 15%;
+    bottom: 15%;
+    width: 70%;
+    height: 70%;
+  }
   #navimenu #navimenu--on:checked ~ .navimenu--area .navimenu--contant {
     -webkit-transform: scale(100%);
             transform: scale(100%);
   }
   #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu {
-    right: 5%;
-    bottom: 5%;
-    width: 10vw;
-    height: 10vw;
+    position: absolute;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1917,6 +1938,22 @@ html, body {
     height: 20%;
     background-color: #000;
     border-radius: 3px;
+  }
+  #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu {
+    right: 5%;
+    bottom: 5%;
+    width: 10vw;
+    height: 10vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   #navimenu #navimenu--on:checked ~ .navimenu--area .tglbutton-menu .tglbutton-menu--bar1 {
     -webkit-transform: translateY(5vw) rotate(405deg);
@@ -1942,15 +1979,130 @@ html, body {
   .navimenu--contant .navicate .navicate--on {
     display: none;
   }
-  .navimenu--contant .navicate .navicate--on:not(:checked) ~ .navicate--list {
+  .navimenu--contant .navicate .navicate--toggle {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .navimenu--contant .navicate .navicate--on:not(:checked) ~ .navicate--list p, .navimenu--contant .navicate .navicate--on:not(:checked) ~ .navicate--list a {
+    line-height: 0.000001rem;
+    opacity: 0;
+    /*
+                transition:
+                  line-height 1s ease-out,
+                  opacity     .5s linear;*/
     -webkit-transform: scaleY(0);
             transform: scaleY(0);
-    height: 0;
   }
-  .navimenu--contant .navicate .navicate--on:checked ~ .navicate--list {
+  .navimenu--contant .navicate .navicate--on:checked ~ .navicate--list p, .navimenu--contant .navicate .navicate--on:checked ~ .navicate--list a {
+    line-height: 1rem;
+    opacity: 1;
+    /*
+                transition:
+                  line-height 1s ease-out,
+                  opacity     .5s linear .1s;
+                  */
     -webkit-transform: scaleY(100%);
             transform: scaleY(100%);
-    height: auto;
+  }
+  .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate {
+    display: inline-block;
+    width: 5vw;
+    height: 5vw;
+    background-color: yellow;
+    margin-right: 2.5vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar1, .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar2 {
+    display: block;
+    height: 15%;
+    background-color: #000;
+    border-radius: 3px;
+  }
+  .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar1 {
+    -webkit-transform-origin: left top;
+            transform-origin: left top;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar2 {
+    -webkit-transform-origin: left bottom;
+            transform-origin: left bottom;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+  .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate {
+    -webkit-transform: translateX(2.5vw);
+            transform: translateX(2.5vw);
+  }
+  .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar1, .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar2 {
+    width: 70%;
+  }
+  .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar1 {
+    -webkit-transform-origin: left top;
+            transform-origin: left top;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  .navimenu--contant .navicate--on:not(:checked) ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar2 {
+    -webkit-transform-origin: left bottom;
+            transform-origin: left bottom;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+  .navimenu--contant .navicate--on:checked ~ .navicate--toggle .tglbutton-cate {
+    display: inline-block;
+    width: 5vw;
+    height: 5vw;
+    background-color: yellow;
+    margin-right: 2.5vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .navimenu--contant .navicate--on:checked ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar1, .navimenu--contant .navicate--on:checked ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar2 {
+    display: block;
+    height: 15%;
+    background-color: #000;
+    border-radius: 3px;
+  }
+  .navimenu--contant .navicate--on:checked ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar1 {
+    -webkit-transform-origin: left top;
+            transform-origin: left top;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  .navimenu--contant .navicate--on:checked ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar2 {
+    -webkit-transform-origin: left bottom;
+            transform-origin: left bottom;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+  .navimenu--contant .navicate--on:checked ~ .navicate--toggle .tglbutton-cate {
+    -webkit-transform: none;
+            transform: none;
+  }
+  .navimenu--contant .navicate--on:checked ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar1, .navimenu--contant .navicate--on:checked ~ .navicate--toggle .tglbutton-cate .tglbutton-cate--bar2 {
+    width: 126.5%;
   }
 }
 
