--- a/sass/project/_p-accordionmenu.scss
+++ b/sass/project/_p-accordionmenu.scss
@@ -4,13 +4,34 @@
         .#{$baseclass}--on{
             display:none;
         }
+        .#{$baseclass}--toggle{
+            display:flex;
+            align-items: center;
+        }
         .#{$baseclass}--on:not(:checked) ~ .#{$baseclass}--list{
-            transform: scaleY(0);
-            height: 0;
+            p,a{
+                line-height: 0.000001rem;
+                opacity: 0;
+                //visibility: hidden;
+                /*
+                transition:
+                  line-height 1s ease-out,
+                  opacity     .5s linear;*/
+                transform: scaleY(0);
+            }
         }
         .#{$baseclass}--on:checked ~ .#{$baseclass}--list{
-            transform: scaleY(100%);
-            height: auto;
+            p,a{
+                line-height: 1rem;
+                opacity: 1;
+                //visibility: visible;
+                /*
+                transition:
+                  line-height 1s ease-out,
+                  opacity     .5s linear .1s;
+                  */
+                transform: scaleY(100%);
+            }
         }
     }
 }
